Fixed drop down clipping in query indexes

--- a/Raven.Studio.Html5/Content/app.less
+++ b/Raven.Studio.Html5/Content/app.less
@@ -1095,6 +1095,7 @@ div.btn-group[data-toggle=buttons-radio] button.active {
 
         li {
             overflow: visible !important;
+            max-width: none !important;
         }
     }
 
